Fixing header width too wide

--- a/notion-header.css
+++ b/notion-header.css
@@ -15,7 +15,7 @@
 
 /* Make Notion header cover image full-screen */
 .notion-header__cover.has-cover {
-    width: 100vw !important;
+    width: 100% !important;
     height: 100vh !important;
     max-height: 125vw !important;
 
